--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-hello world
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Sign Your Mortgage Documentation</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>sign-your-mortgage-documentation</h1>
+        <p>Sign Your Mortgage API Documentation</p>
+
+        <p class="view"><a href="https://github.com/LandRegistry/sign-your-mortgage-documentation">View the Project on GitHub <small>LandRegistry/sign-your-mortgage-documentation</small></a></p>
+      </header>
+      <section>
+<h2>Sign Your Mortgage</h2>
+  <p>What our service does</p>
+<div class="schemas">
+  <h3>JSON Schemas</h3>
+  <h4>schema info goes here</h4>
+</div>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/LandRegistry">LandRegistry</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+
+  </body>
+</html>
