added deed-api schema

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <p>What our service does</p>
 <div class="schemas">
   <h3>JSON Schemas</h3>
-  <h4>schema info goes here</h4>
+  <h4>
+    <a href="schemas/deed-api.json">Deed API</a>
+  </h4>
 </div>
       </section>
       <footer>
