converted test hub urls to links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <p>Access to the Test Hub is controlled via webseal and you will need to request to have your organisations certificate added to the access list</p>
           <p>the URL's for the Test-Hub are as follows:</p>
           <h3>Borrower Frontend</h3>
-          <p>https://search-property-information.service.gov.uk/sign-my-mortgage/</p>
+          <a href="https://search-property-information.service.gov.uk/sign-my-mortgage/">https://search-property-information.service.gov.uk/sign-my-mortgage/</a>
           <h3>Deed API</h3>
-          <p>http://beta.landregistry.gov.uk/api/deeds</p>
+          <a href="http://beta.landregistry.gov.uk/api/deeds">http://beta.landregistry.gov.uk/api/deeds</a>
         </div>
         <div class="schemas">
           <h2>Example Payloads</h2>
