--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Sign Your Mortgage Documentation</h1>
         <p>Sign Your Mortgage API Documentation</p>
 
-        <p class="view"><a href="https://github.com/LandRegistry/sign-your-mortgage-documentation">View the Project on GitHub <small>LandRegistry/sign-your-mortgage-documentation</small></a></p>
+        <p class="view"><a href="https://github.com/LandRegistry/deed-api">View the Project on GitHub <small>LandRegistry/deed-api</small></a></p>
         <p><a href="#aboutThisService">About This Service</a></p>
         <p><a href="#jsonSchemas">JSON Schemas</a></p>
         <p><a href="#testHub">Test Hub</a></p>
