spelling and grammer corrections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
         <a name="aboutThisService"><h2>About This Service</h2></a>
-        <p>The Sign Your Mortgage service allows a conveyancer to create a digital mortgage using the interface provided with Deed-API. the service also provides endpoints for getting a created deed, checking which deeds have been signed by borrowers and making a deed effective.</p>
+        <p>The Sign Your Mortgage service allows a conveyancer to create a digital mortgage using the interface provided by Deed-API. The service also provides endpoints for getting a created deed, checking which deeds have been signed by borrowers and making a deed effective.</p>
         <p>Deeds created using the Deed-Api service can be signed by a borrower using the Sign Your Mortgage service on GOV.UK and submitted to HM Land Registry for registration using Business Gateway.</p>
         <div class="schemas">
           <a name="jsonSchemas"><h2>JSON Schemas</h2></a>
@@ -37,9 +37,9 @@
         </div>
         <div class="schemas">
           <a name="testHub"><h2>Test Hub</h2></a>
-          <p>HM Land Registry operates a test hub which runs a test version of the Deed Api service allowing developers to test thier solution against a running example of the service.</p>
-          <p>Access to the Test Hub is controlled via webseal and you will need to request to have your organisations certificate added to the access list</p>
-          <p>the URL's for the Test-Hub are as follows:</p>
+          <p>HM Land Registry operates a test hub which runs a test version of the Deed Api service allowing developers to test their solution against a running example of the service.</p>
+          <p>Access to the Test Hub is controlled via webseal and you will need to request to have your organisation's certificate added to the access list.</p>
+          <p>The URL's for the Test-Hub are as follows:</p>
           <h3>Borrower Frontend</h3>
           <a href="https://search-property-information.service.gov.uk/sign-my-mortgage/">https://search-property-information.service.gov.uk/sign-my-mortgage/</a>
           <h3>Deed API</h3>
@@ -47,8 +47,8 @@
         </div>
         <div class="schemas">
           <a name="examplePayloads"><h2>Example Payloads and Responses</h2></a>
-          <p>Below are examples of payloads accepted by Deed API and responses</p>
-          <p><b>NOTE</b> This is not an exhaustive example of all error messages the system returns but provides an example of the format of each response and error type</p>
+          <p>Below are examples of payloads accepted by Deed API and responses.</p>
+          <p><b>NOTE</b> This is not an exhaustive example of all error messages the system returns but provides an example of the format of each response and error type.</p>
           <h3>Create Deed</h3>
           <h4>POST /deed/</h4>
           <h5>Payload</h5>
@@ -218,7 +218,7 @@
         </div>
         <div class="schemas">
           <a name="testData"><h2>Test Data</h2></a>
-          <p>There are a selection of test Titles and MD references in the Test Hub which can be used to test the service. note that when creating a deed the borrowers must be an exact match to the proprietors on the register. See example payload above for a create deed payload using the data below that will work in the test hub. The test data is as follows:</p>
+          <p>There are a selection of test Titles and MD references in the Test Hub which can be used to test the service. Note that when creating a deed the borrowers must be an exact match to the proprietors on the register. See example payload above for a create deed payload using the data below that will work in the test hub. The test data is as follows:</p>
           <h3>Good Title</h3>
           <p><b>Title number</b> GR515835</p>
           <p><b>Proprietors</b> Ann Smith, Fredd Smith</p>
