changed link for schema to point to version on github

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="schemas">
           <a name="jsonSchemas"><h2>JSON Schemas</h2></a>
           <h4>
-            <a href="schemas/deed-api.json">Deed API</a>
+            <a href="https://raw.githubusercontent.com/LandRegistry/deed-api/develop/application/deed/schemas/deed-api.json">
+              Deed API
+            </a>
           </h4>
         </div>
         <div class="schemas">
