--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
         <div class="schemas">
           <a name="jsonSchemas"><h2>JSON Schemas</h2></a>
           <h4>
+            <a href="swagger-ui/dist/index.html">
+              Swagger
+            </a>
+          </h4>
+          <h4>
             <a href="https://raw.githubusercontent.com/LandRegistry/deed-api/develop/application/deed/schemas/deed-api.json">
-              Deed API
+              Schema File
             </a>
           </h4>
         </div>
