--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="schemas">
           <a name="jsonSchemas"><h2>JSON Schemas</h2></a>
           <h4>
-            <a href="swagger-ui/dist/index.html">
+            <a href="swagger/dist/index.html">
               Swagger
             </a>
           </h4>
