minor renaming of links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           View the Project on GitHub <small>LandRegistry/deed-api</small></a>
         </p>
         <p><a href="#aboutThisService">About This Service</a></p>
-        <p><a href="#jsonSchemas">JSON Schemas</a></p>
+        <p><a href="#jsonSchemas">Schemas</a></p>
         <p><a href="#testHub">Test Hub</a></p>
         <p><a href="#examplePayloads">Example Payloads and Responses</a></p>
         <p><a href="#testData">Test Data</a></p>
@@ -42,7 +42,7 @@
           HM Land Registry for registration using Business Gateway.
         </p>
         <div class="schemas">
-          <a name="jsonSchemas"><h2>JSON Schemas</h2></a>
+          <a name="jsonSchemas"><h2>Schemas</h2></a>
           <h4>
             <a href="swagger/dist/index.html">
               Swagger
@@ -50,7 +50,7 @@
           </h4>
           <h4>
             <a href="https://raw.githubusercontent.com/LandRegistry/deed-api/develop/application/deed/schemas/deed-api.json">
-              Schema File
+              JSON Schema File
             </a>
           </h4>
         </div>
