--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </a>
           </h4>
           <h4>
-            <a href="https://raw.githubusercontent.com/LandRegistry/deed-api/develop/application/deed/schemas/deed-api.json">
-              JSON Schema File
+            <a href="https://raw.githubusercontent.com/LandRegistry/sign-your-mortgage-documentation/gh-pages/schema.yaml">
+              YAML Schema File
             </a>
           </h4>
         </div>
