corrected XML formatting

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
              to lodge an Application and add a certified document to follow to the application as shown below</p>
 
              <code>
-<Document>
-  <CertifiedCopy>Certified</CertifiedCopy>
-</Document>
+&lt;Document&gt;</br>
+&emsp;&lt;CertifiedCopy&gt;Certified&lt;/CertifiedCopy&gt;</br>
+&lt;/Document&gt;</br>
              </code>
           <p>however once this application has been lodged do not submit a reaquest to lodge the charge document
              Business Gateway will detect this is a Digital Mortgage and do this for you automatically</p>
