--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           </p>
           <p>The URL's for the Test-Hub are as follows:</p>
           <h3>Borrower Frontend</h3>
-          <a href="http://testhub.sign-your-mortgage-deed.landregistry.gov.uk/">
-            http://testhub.sign-your-mortgage-deed.landregistry.gov.uk/
+          <a href="http://sign-your-mortgage-deed.landregistry.gov.uk/testhub">
+            http://sign-your-mortgage-deed.landregistry.gov.uk/testhub
           </a>
           <h3>Deed API</h3>
           <a href="http://bgtest.landregistry.gov.uk/api/deeds">
